# DependencySolver

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE
include/: builder.h  buildgraph.h  target.h  target_factory.h  target_manager.h
src/: .clang-format  builder.cpp  buildgraph.cpp  main.cpp  target.cpp  target_factory.cpp  target_manager.cpp
